force-app/main/default/objects/Form_Exceptions__c/Form_Exceptions__c.object-meta.xml
<CustomObject>
    <label>Form Exception</label>
    <nameField>
        <displayFormat>FE-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>