force-app/main/default/objects/Form_Exceptions__c/fields/Date_of_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Occurrence__c</fullName>
    <label>Date of Occurrence</label>
    <type>Date</type>
</CustomField>