force-app/main/default/objects/Form_Exceptions__c/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <description>Your should fill the other reason if reason picklist is selected as &quot;Other&quot;</description>
    <label>Other Reason</label>
    <type>TextArea</type>
</CustomField>