force-app/main/default/objects/Form_Exceptions__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Training_Time</fullName>
                <label>Training Time</label>
            </value>
            <value>
                <fullName>Show_Up_Time</fullName>
                <label>Show Up Time</label>
            </value>
            <value>
                <fullName>Waiting_Time</fullName>
                <label>Waiting Time</label>
            </value>
            <value>
                <fullName>Rain_Out_Weather</fullName>
                <label>Rain Out/Weather</label>
            </value>
            <value>
                <fullName>Working As Floater</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>