force-app/main/default/objects/Form_Exceptions__c/fields/SFSUser__c.field-meta.xml
<CustomField>
    <fullName>SFSUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFSUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FormExceptions</relationshipName>
    <type>Lookup</type>
</CustomField>