force-app/main/default/objects/Form_Exceptions__c/fields/USGas_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>USGas_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Jitin: created for story: 24331</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Form Exceptions</relationshipLabel>
    <relationshipName>Form_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>